--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&family=Raleway:wght@300;400&display=swap');
 
+/* -------------------------------------------------------------------- Variables */
+
+:root {
+    --sample-color: #fff000;
+    --sample-color-2: #f0000f;
+}
+
 /* -------------------------------------------------------------------- Resets */
 
 html {
@@ -13,8 +20,13 @@ body {
     font-family: 'Nunito', sans-serif;
 }
 
-p {
+p, a {
     font-family: 'Raleway', sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
 }
 
 /* -------------------------------------------------------------------- Accessibility */
@@ -34,4 +46,18 @@ p {
     clip: rect(0,0,0,0);
     white-space: nowrap;
     border: 0;
+}
+
+/* -------------------------------------------------------------------- Footer */
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    display: grid;
+    width: 100%;
+    background: var(--sample-color);
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    align-items: center;
 }
