--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ body {
     background-color: #fff;
     color: #000;
     font-family: 'Nunito', sans-serif;
+    height: calc(100vh - 48px);
 }
 
 p, a {
@@ -50,13 +51,18 @@ a {
 
 /* -------------------------------------------------------------------- Footer */
 
+.footer-allowance {
+    padding-bottom: 48px;
+}
+
 footer {
     position: fixed;
     bottom: 0;
     left: 0;
-    display: grid;
     width: 100%;
+    height: 48px;
     background: var(--sample-color);
+    display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
     align-items: center;
