--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,10 @@
 /* -------------------------------------------------------------------- Variables */
 
 :root {
-    --sample-color: #fff000;
-    --sample-color-2: #f0000f;
+    --p-color-dk: #1a1a25;
+    --p-color-lt: #d8d8d8;
+    --light-blue: #5DD0FA;
+    --light-pink: #F7A8B9;
 }
 
 /* -------------------------------------------------------------------- Resets */
@@ -15,19 +17,27 @@ html {
 }
 
 body {
-    background-color: #fff;
-    color: #000;
+    background-color: var(--p-color-lt);
+    color: var(--p-color-dk);
     font-family: 'Nunito', sans-serif;
     height: calc(100vh - 48px);
 }
 
-p, a {
+p,
+a {
     font-family: 'Raleway', sans-serif;
 }
 
 a {
     text-decoration: none;
-    color: #000;
+    color: var(--p-color-dk);
+}
+
+/* -------------------------------------------------------------------- Utilities */
+
+.readable-width {
+    max-width: 720px;
+    margin: auto;
 }
 
 /* -------------------------------------------------------------------- Accessibility */
@@ -44,7 +54,7 @@ a {
     padding: 0;
     margin: -1px;
     overflow: hidden;
-    clip: rect(0,0,0,0);
+    clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border: 0;
 }
@@ -61,9 +71,37 @@ footer {
     left: 0;
     width: 100%;
     height: 48px;
-    background: var(--sample-color);
+    background: var(--p-color-lt);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
     align-items: center;
+}
+
+/* -------------------------------------------------------------------- Accessibility Page */
+
+.a11y-page {
+    background: var(--light-blue);
+    background: linear-gradient(90deg, rgba(93,208,250,1) 0%, rgba(247,168,185,1) 100%);
+}
+
+/* -------------------------------------------------------------------- Media queries */
+
+@media (prefers-reduced-motion) {
+    /* Non-motion styles here */
+}
+
+@media (prefers-color-scheme: dark) {
+    /* Dark mode color styles here */
+    :root {
+        --p-color-lt: #1a1a25;
+        --p-color-dk: #d8d8d8;
+        --light-blue: #031B68;
+        --light-pink: #b82b4a;
+    }
+
+    .a11y-page {
+        background: var(--light-blue);
+        background: linear-gradient(90deg, rgba(3,27,104,1) 0%, rgba(184, 43, 74,1) 100%);
+    }
 }
