--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,8 @@
 :root {
     --sample-color: #fff000;
     --sample-color-2: #f0000f;
+    --p-color-dk: #1a1a25;
+    --p-color-lt: #d8d8d8;
 }
 
 /* -------------------------------------------------------------------- Resets */
@@ -14,11 +16,18 @@ html {
     width: 100vw;
 }
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    background-color: #fff;
-    color: #000;
+    background-color: var(--p-color-dk);
+    color: var(--p-color-lt);
     font-family: 'Nunito', sans-serif;
     height: calc(100vh - 48px);
+    /* overflow-x: hidden; */
 }
 
 p, a {
@@ -28,6 +37,52 @@ p, a {
 a {
     text-decoration: none;
     color: #000;
+}
+
+/* -------------------------------------------------------------------- Awareness */
+
+#awareness {
+    display: grid;
+    grid-template-columns: 1;
+    grid-template-rows: repeat(4, 1fr);
+    justify-content: center;
+    align-items: center;
+}
+
+model-viewer {
+    height: 50vh;
+    width: 100%;
+    pointer-events: none;
+    background-color: transparent;
+}
+
+#female-model-viewer {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+}
+
+#awareness-content-1 {
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+}
+
+#awareness-content-2 {
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
+}
+
+#male-model-viewer {
+    grid-column: 1 / -1;
+    grid-row: 4 / 5;
+}
+
+#awareness > article {
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+}
+
+.article-content {
+    margin: 1rem 3rem;
 }
 
 /* -------------------------------------------------------------------- Accessibility */
@@ -62,8 +117,48 @@ footer {
     width: 100%;
     height: 48px;
     background: var(--sample-color);
+    color: var(--p-color-dk);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
     align-items: center;
+}
+
+/* -------------------------------------------------------------------- Media Queries */
+
+@media (min-width: 992px) {
+    #awareness {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+    model-viewer {
+        height: 70vh;
+        margin: 1rem 0;
+    }
+
+    #female-model-viewer {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+    
+    #awareness-content-1 {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+    
+    #awareness-content-2 {
+        grid-column: 1 / 2;
+        grid-row: 2 / -1;
+    }
+    
+    #male-model-viewer {
+        grid-column: 2 / 3;
+        grid-row: 2 / -1;
+    }
+
+    #awareness > article {
+        font-size: 1.6rem;
+        line-height: 3.2rem;
+    }
 }
