--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,13 +58,6 @@ a:focus {
 /* -------------------------------------------------------------------- Contact Us Page */
 /* code from https://www.w3schools.com/ */
 
-#contact-form {
-    margin: 0 150px;
-    border-radius: 5px;
-    background-color: #EBEBEB;
-    padding: 25px;
-}
-
 input[type=text], select, textarea {
     width: 100%;
     padding: 12px;
@@ -77,7 +70,7 @@ input[type=text], select, textarea {
   }
   
    button[type=submit] {
-    background-color: #D16B45;
+    background-color: #e6007e;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -86,7 +79,7 @@ input[type=text], select, textarea {
   }
   
   button[type=submit]:hover {
-    background-color: #D16B45;
+    background-color: #e6007e;
   }
   
   
