--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ a:focus {
     width: 70px;
     margin: 0px;
     padding: 19px;
-    animation: logo-spiner 10s 0s ease;
+    animation: logo-spiner infinite 20s linear;
 }
 
 @keyframes logo-spiner {
