--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@
 
 html {
     height: 100%;
-    width: 100vw;
+    width: 100%;
 }
 
 body {
@@ -27,6 +27,7 @@ body {
     color: var(--p-color-dk);
     font-family: 'Nunito', sans-serif;
     height: calc(100vh - 48px);
+    margin: 0;
 }
 
 p,
@@ -58,8 +59,8 @@ a:focus {
 /* -------------------------------------------------------------------- Accessibility */
 
 .tap-target {
-    width: 48px;
-    height: 48px;
+    min-width: 48px;
+    min-height: 48px;
 }
 
 .sr-only {
@@ -74,25 +75,7 @@ a:focus {
     border: 0;
 }
 
-/* ----------------------------------------Header */
-
-.overlay-content li {
-    text-transform: uppercase;
-}
-
-.logo {
-    float: left;
-    margin: 10px;
-}
-
-
-.logo-spin img {
-    float: left;
-    width: 70px;
-    margin: 0px;
-    padding: 19px;
-    animation: logo-spiner 10s 0s ease;
-}
+/* -------------------------------------------------------------------- Animations */
 
 @keyframes logo-spiner {
     from {
@@ -104,6 +87,31 @@ a:focus {
     }
 }
 
+/* -------------------------------------------------------------------- Header */
+
+header {
+    display: grid;
+    grid-template-areas: "logo-img project-name nav-menu";
+    width: 100%;
+    overflow: hidden;
+    background-color: var(--pink);
+    align-items: center;
+    justify-items: center;
+}
+
+.logo-spin img {
+    grid-area: logo-img;
+    width: 70px;
+    margin: 0px;
+    animation: logo-spiner 10s 0s ease;
+    padding-left: 20px;
+}
+
+.logo {
+    visibility: hidden;
+    grid-area: project-name;
+    margin: 10px;
+}
 
 .logo h2 {
     color: var(--white);
@@ -111,20 +119,29 @@ a:focus {
     padding: 19px;
 }
 
-.bar_icon {
+.menu-bar,
+nav {
+    grid-area: nav-menu;
+}
+
+.menu-bar {
+    text-align: center;
+    justify-self: right;
+    margin-right: 20px;
+}
+
+.logo-spin {
+    justify-self: left;
+}
+
+.bar-icon {
     display: none;
+    padding-top: 8px;
 }
 
-#menu {
+nav {
     overflow: hidden;
-    margin: 29px 10px 10px 10px;
 }
-
-#header {
-    overflow: hidden;
-    background-color: var(--pink);
-}
-
 
 .menu ul {
     list-style-type: none;
@@ -132,8 +149,13 @@ a:focus {
     padding: 0;
 }
 
-.menu li {
-    float: right;
+.overlay-content {
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.overlay-content li {
+    text-transform: uppercase;
+    text-align: center;
 }
 
 .menu a {
@@ -144,15 +166,13 @@ a:focus {
     display: block;
 }
 
-.menu a:hover {
+.menu a:hover,
+.menu a:focus {
     background-color: var(--blue);
     cursor: pointer;
 }
 
-.menu_bar {
-    display: none;
-}
-
+.menu-bar,
 .overlay-content hr {
     display: none;
 }
@@ -185,8 +205,11 @@ footer {
 
 /* -------------------------------------------------------------------- Media queries */
 
+/* Non-motion styles here */
 @media (prefers-reduced-motion) {
-    /* Non-motion styles here */
+    .logo-spin img {
+        animation: none;
+    }
 }
 
 /* Dark mode color styles here */
@@ -208,31 +231,19 @@ footer {
     }
 }
 
-
 /* -------------------------------------------------------------------- Media query */
 
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width:900px) {
-    #menu {
-        margin: 0;
-    }
-
-    #menu li {
-        float: none;
-    }
-
-    .menu_bar {
+@media only screen and (max-width: 768px) {
+    .menu-bar {
         background-color: var(--blue);
         border-radius: 2px 2px 2px 2px;
-        margin: 10px;
         display: block;
-        float: right;
-        font-size: 15px;
-        padding: 19px;
         color: var(--white);
+        width: 48px;
+        height: 48px;
     }
 
-    /* menu slide down from the top*/
+    /* Menu slide down from the top*/
     .menu {
         height: 0%;
         width: 100%;
@@ -240,11 +251,11 @@ footer {
         z-index: 1;
         top: 0;
         left: 0;
-        background-color: #2d2d2b;
+        background-color: var(--p-color-lt);
         overflow-y: hidden;
         transition: 0.5s;
+        margin: 0;
     }
-
 
     .overlay-content {
         overflow: hidden;
@@ -253,30 +264,40 @@ footer {
         cursor: pointer;
     }
 
-
     .overlay-content li {
         display: block;
         text-align: center;
     }
 
-    .overlay-content hr {
+    .overlay-content li:after {
+        content: "";
+        background: white;
         display: block;
         width: 50%;
-        color: white;
-        border: 1px solid white;
+        height: 2px;
         margin: auto;
     }
 
+    .close-icon {
+        padding-top: 8px;
+    }
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {}
+@media only screen and (min-width: 768px) {
+    .overlay-content {
+        display: grid;
+    }
+}
 
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {}
+@media only screen and (max-width: 1040px) {
+    .logo {
+        width: 10px;
+        height: 65px;
+    }
+}
 
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {}
+@media only screen and (min-width: 1040px) {
+    .logo {
+        visibility: visible;
+    }
+}
