--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,8 @@
 /* -------------------------------------------------------------------- Variables */
 
 :root {
+    --sample-color: #fff000;
+    --sample-color-2: #f0000f;
     --blue: #4acdf9;
     --pink: #e6007e;
     --black: #000000;
@@ -17,13 +19,7 @@
 
 html {
     height: 100%;
-    width: 100%;
-}
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    width: 100vw;
 }
 
 body {
@@ -31,7 +27,6 @@ body {
     color: var(--p-color-dk);
     font-family: 'Nunito', sans-serif;
     height: calc(100vh - 48px);
-    margin: 0;
 }
 
 p,
@@ -51,10 +46,6 @@ a {
     margin: auto;
 }
 
-.section-margin {
-    margin: 1.5rem 0;
-}
-
 /* -------------------------------------------------------------------- Hover / Focus */
 
 a:hover,
@@ -62,73 +53,6 @@ a:focus {
     text-decoration: underline;
     text-decoration-color: var(--light-pink);
     text-decoration-style: double;
-}
-
-/* -------------------------------------------------------------------- Awareness */
-
-#awareness {
-    display: grid;
-    grid-template-columns: 1;
-    grid-template-rows: minmax(3rem, auto) repeat(4, 1fr);
-    justify-content: center;
-    align-items: center;
-}
-
-#awareness-title {
-    font-size: 2.2rem;
-    font-style: italic;
-}
-
-#awareness-title::after {
-    display: block;
-    content: '';
-    margin: 0.5rem auto;
-    height: 2px;
-    width: 80%;
-    background-color: var(--light-pink);
-}
-
-model-viewer {
-    height: 50vh;
-    width: 100%;
-    pointer-events: none;
-    background-color: transparent;
-}
-
-#awareness-title {
-    grid-column: 1 / -1;
-    grid-row: 1 / 2;
-    justify-self: center;
-    align-self: center;
-}
-
-#female-model-viewer {
-    grid-column: 1 / -1;
-    grid-row: 2 / 3;
-}
-
-#awareness-content-1 {
-    grid-column: 1 / -1;
-    grid-row: 3 / 4;
-}
-
-#awareness-content-2 {
-    grid-column: 1 / -1;
-    grid-row: 5 / 6;
-}
-
-#male-model-viewer {
-    grid-column: 1 / -1;
-    grid-row: 4 / 5;
-}
-
-#awareness > article {
-    font-size: 1.2rem;
-    line-height: 2rem;
-}
-
-.article-content {
-    margin: 1rem 3rem;
 }
 
 /* -------------------------------------------------------------------- Contact Us Page */
@@ -143,26 +67,29 @@ input[type=text], select, textarea {
     margin-top: 6px; 
     margin-bottom: 16px; 
     resize: vertical 
-}
-
-button[type=submit] {
+  }
+  
+   button[type=submit] {
     background-color: #e6007e;
     color: white;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
+  }
   
-button[type=submit]:hover {
+  button[type=submit]:hover {
     background-color: #e6007e;
-}
+  }
+  
+  
+
 
 /* -------------------------------------------------------------------- Accessibility */
 
 .tap-target {
-    min-width: 48px;
-    min-height: 48px;
+    width: 48px;
+    height: 48px;
 }
 
 .sr-only {
@@ -177,9 +104,27 @@ button[type=submit]:hover {
     border: 0;
 }
 
-/* -------------------------------------------------------------------- Animations */
+/* ----------------------------------------Header */
 
-@keyframes logo-spinner {
+.overlay-content li {
+    text-transform: uppercase;
+}
+
+.logo {
+    float: left;
+    margin: 10px;
+}
+
+
+.logo-spin img {
+    float: left;
+    width: 70px;
+    margin: 0px;
+    padding: 19px;
+    animation: logo-spiner infinite 20s linear;
+}
+
+@keyframes logo-spiner {
     from {
         transform: rotate(0deg);
     }
@@ -189,31 +134,6 @@ button[type=submit]:hover {
     }
 }
 
-/* -------------------------------------------------------------------- Header */
-
-header {
-    display: grid;
-    grid-template-areas: "logo-img project-name nav-menu";
-    width: 100%;
-    overflow: hidden;
-    background-color: var(--pink);
-    align-items: center;
-    justify-items: center;
-}
-
-.logo-spin img {
-    grid-area: logo-img;
-    width: 70px;
-    margin: 0px;
-    padding-left: 20px;
-    animation: logo-spinner infinite 20s linear;
-}
-
-.logo {
-    visibility: hidden;
-    grid-area: project-name;
-    margin: 10px;
-}
 
 .logo h2 {
     color: var(--white);
@@ -221,29 +141,20 @@ header {
     padding: 19px;
 }
 
-.menu-bar,
-nav {
-    grid-area: nav-menu;
-}
-
-.menu-bar {
-    text-align: center;
-    justify-self: right;
-    margin-right: 20px;
-}
-
-.logo-spin {
-    justify-self: left;
-}
-
-.bar-icon {
+.bar_icon {
     display: none;
-    padding-top: 8px;
 }
 
-nav {
+#menu {
     overflow: hidden;
+    margin: 29px 10px 10px 10px;
 }
+
+#header {
+    overflow: hidden;
+    background-color: var(--pink);
+}
+
 
 .menu ul {
     list-style-type: none;
@@ -251,13 +162,8 @@ nav {
     padding: 0;
 }
 
-.overlay-content {
-    grid-template-columns: repeat(5, 1fr);
-}
-
-.overlay-content li {
-    text-transform: uppercase;
-    text-align: center;
+.menu li {
+    float: right;
 }
 
 .menu a {
@@ -268,13 +174,15 @@ nav {
     display: block;
 }
 
-.menu a:hover,
-.menu a:focus {
+.menu a:hover {
     background-color: var(--blue);
     cursor: pointer;
 }
 
-.menu-bar,
+.menu_bar {
+    display: none;
+}
+
 .overlay-content hr {
     display: none;
 }
@@ -307,11 +215,8 @@ footer {
 
 /* -------------------------------------------------------------------- Media queries */
 
-/* Non-motion styles here */
 @media (prefers-reduced-motion) {
-    .logo-spin img {
-        animation: none;
-    }
+    /* Non-motion styles here */
 }
 
 /* Dark mode color styles here */
@@ -333,19 +238,31 @@ footer {
     }
 }
 
+
 /* -------------------------------------------------------------------- Media query */
 
-@media only screen and (max-width: 768px) {
-    .menu-bar {
-        background-color: var(--blue);
-        border-radius: 2px 2px 2px 2px;
-        display: block;
-        color: var(--white);
-        width: 48px;
-        height: 48px;
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width:900px) {
+    #menu {
+        margin: 0;
     }
 
-    /* Menu slide down from the top*/
+    #menu li {
+        float: none;
+    }
+
+    .menu_bar {
+        background-color: var(--blue);
+        border-radius: 2px 2px 2px 2px;
+        margin: 10px;
+        display: block;
+        float: right;
+        font-size: 15px;
+        padding: 19px;
+        color: var(--white);
+    }
+
+    /* menu slide down from the top*/
     .menu {
         height: 0%;
         width: 100%;
@@ -353,11 +270,11 @@ footer {
         z-index: 1;
         top: 0;
         left: 0;
-        background-color: var(--p-color-lt);
+        background-color: #2d2d2b;
         overflow-y: hidden;
         transition: 0.5s;
-        margin: 0;
     }
+
 
     .overlay-content {
         overflow: hidden;
@@ -366,85 +283,30 @@ footer {
         cursor: pointer;
     }
 
+
     .overlay-content li {
         display: block;
         text-align: center;
     }
 
-    .overlay-content li:after {
-        content: "";
-        background: white;
+    .overlay-content hr {
         display: block;
         width: 50%;
-        height: 2px;
+        color: white;
+        border: 1px solid white;
         margin: auto;
     }
 
-    .close-icon {
-        padding-top: 8px;
-    }
 }
 
-    /* Large devices (Desktop tablets, 992px and up) */
-@media only screen and (min-width: 992px) {
-    #awareness {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: minmax(3rem, auto) repeat(2, 1fr);
-    }
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {}
 
-    model-viewer {
-        height: 60vh;
-        margin: 1rem 0;
-    }
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {}
 
-    #awareness-title {
-        grid-column: 1 / -1;
-        grid-row: 1 / 2;
-        align-self: center;
-        justify-self: center;
-    }
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {}
 
-    #female-model-viewer {
-        grid-column: 1 / 2;
-        grid-row: 2 / 3;
-    }
-    
-    #awareness-content-1 {
-        grid-column: 2 / 3;
-        grid-row: 2 / 3;
-    }
-    
-    #awareness-content-2 {
-        grid-column: 1 / 2;
-        grid-row: 3 / -1;
-    }
-    
-    #male-model-viewer {
-        grid-column: 2 / 3;
-        grid-row: 3 / -1;
-    }
-
-    #awareness > article {
-        font-size: 1.6rem;
-        line-height: 3.2rem;
-    }
-}
-
-@media only screen and (min-width: 768px) {
-    .overlay-content {
-        display: grid;
-    }
-}
-
-@media only screen and (max-width: 1040px) {
-    .logo {
-        width: 10px;
-        height: 65px;
-    }
-}
-
-@media only screen and (min-width: 1040px) {
-    .logo {
-        visibility: visible;
-    }
-}
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {}
