Added resource section content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -448,3 +448,15 @@ footer {
         visibility: visible;
     }
 }
+
+
+/* -------------------------------------------------------------------- Resource styling */
+
+#resource-section 
+    {
+        display: grid;
+        grid-template-columns: 1;
+        grid-template-rows: minmax(3rem, auto) repeat(4, 1fr);
+        justify-content: center;
+        align-items: center;
+    }
