--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,6 +279,10 @@ nav {
     display: none;
 }
 
+.large-screen {
+    height: revert;
+}
+
 /* -------------------------------------------------------------------- Footer */
 
 .footer-allowance {
@@ -343,6 +347,9 @@ footer {
         color: var(--white);
         width: 48px;
         height: 48px;
+        position: absolute;
+        right: 0;
+        top: 19px;
     }
 
     /* Menu slide down from the top*/
@@ -357,6 +364,10 @@ footer {
         overflow-y: hidden;
         transition: 0.5s;
         margin: 0;
+    }
+
+    .menu ul {
+        margin-top: 40px;
     }
 
     .overlay-content {
@@ -382,6 +393,10 @@ footer {
 
     .close-icon {
         padding-top: 8px;
+    }
+
+    .navbar-toggle {
+        height: 100%;
     }
 }
 
