--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,24 @@ a {
     margin: 1.5rem 0;
 }
 
+.section-title {
+    font-size: 2.2rem;
+    font-style: italic;
+}
+
+.section-title::after {
+    display: block;
+    content: '';
+    margin: 0.5rem auto;
+    height: 2px;
+    width: 80%;
+    background-color: var(--light-pink);
+}
+
+.article-content {
+    margin: 1rem 3rem;
+}
+
 /* -------------------------------------------------------------------- Hover / Focus */
 
 a:hover,
@@ -62,6 +80,31 @@ a:focus {
     text-decoration: underline;
     text-decoration-color: var(--light-pink);
     text-decoration-style: double;
+}
+
+/* -------------------------------------------------------------------- User-utils */
+
+#user-utils {
+    display: grid;
+    grid-template-columns: 1;
+    grid-template-rows: minmax(3rem, auto) 1fr minmax(10rem, auto);
+    justify-content: center;
+    align-items: center;
+}
+
+#utils-title {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    justify-self: center;
+    align-self: center;
+}
+
+#utils-controls {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
 /* -------------------------------------------------------------------- Awareness */
@@ -72,20 +115,6 @@ a:focus {
     grid-template-rows: minmax(3rem, auto) repeat(4, 1fr);
     justify-content: center;
     align-items: center;
-}
-
-#awareness-title {
-    font-size: 2.2rem;
-    font-style: italic;
-}
-
-#awareness-title::after {
-    display: block;
-    content: '';
-    margin: 0.5rem auto;
-    height: 2px;
-    width: 80%;
-    background-color: var(--light-pink);
 }
 
 model-viewer {
@@ -125,10 +154,6 @@ model-viewer {
 #awareness > article {
     font-size: 1.2rem;
     line-height: 2rem;
-}
-
-.article-content {
-    margin: 1rem 3rem;
 }
 
 /* -------------------------------------------------------------------- Contact Us Page */
@@ -387,6 +412,11 @@ footer {
 
     /* Large devices (Desktop tablets, 992px and up) */
 @media only screen and (min-width: 992px) {
+    article {
+        font-size: 1.6rem;
+        line-height: 3.2rem;
+    }
+
     #awareness {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: minmax(3rem, auto) repeat(2, 1fr);
