--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,9 +132,51 @@ model-viewer {
 }
 
 /* -------------------------------------------------------------------- Contact Us Page */
-/* code from https://www.w3schools.com/ */
+#contact {
+    display: grid;
+    grid-template-columns: 1;    
+    justify-content: center;
+    align-items: center;
+}
+#contact-title {  
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    justify-self: center;
+    align-self: center;
+}
 
+#contact-title {
+    font-size: 2.2rem;
+    font-style: italic;
+}
+
+#contact-title::after {
+    display: block;
+    content: '';
+    margin: 0.5rem auto;
+    height: 2px;
+    width: 80%;
+    background-color: var(--light-pink);
+}
+.contactus {
+    display:flex;
+	justify-content: center;    
+	margin: 0 auto;
+}
+
+/* code from https://www.w3schools.com/ */
 input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 6px; 
+    margin-bottom: 16px; 
+    resize: vertical 
+}
+
+input[type=email] {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc; 
@@ -383,6 +425,11 @@ footer {
     .close-icon {
         padding-top: 8px;
     }
+
+    .contactus {
+       margin: 50px;         
+    } 
+
 }
 
     /* Large devices (Desktop tablets, 992px and up) */
