--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,10 @@ body {
 }
 
 p,
-a {
+a,
+input,
+textarea,
+button {
     font-family: 'Nunito', sans-serif;
 }
 
@@ -95,138 +98,10 @@ a:focus {
     text-decoration-style: double;
 }
 
-/* -------------------------------------------------------------------- Awareness */
-
-#awareness {
-    display: grid;
-    grid-template-columns: 1;
-    grid-template-rows: minmax(3rem, auto) auto auto repeat(2, 1fr);
-    justify-content: center;
-    align-items: center;
-}
-
-#awareness-title {
-    grid-column: 1 / -1;
-    grid-row: 1 / 2;
-    justify-self: center;
-    align-self: center;
-}
-
-#utils-content {
-    grid-column: 1 / -1;
-    grid-row: 2 / 3;
-}
-
-#utils-controls {
-    grid-column: 1 / -1;
-    grid-row: 3 / 4;
-}
-
-#awareness-content-1 {
-    grid-column: 1 / -1;
-    grid-row: 4 / 5;
-}
-
-#awareness-content-2 {
-    grid-column: 1 / -1;
-    grid-row: 5 / 6;
-}
-
-#utils-controls {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.utils-buttons {
-    display: flex;
-    flex-direction: column;
-}
-
-.utils-control-button {
-    height: 3.5rem;
-    width: 15rem;
-    margin: 0.5rem 0;
-    border-radius: 0.5rem;
-    font-size: 1.2rem;
-}
-
-model-viewer {
-    height: 50vh;
-    width: 100%;
-    pointer-events: none;
-    background-color: transparent;
-}
-
-/* -------------------------------------------------------------------- Contact Us Page */
-#contact {
-    display: grid;
-    grid-template-columns: 1;    
-    justify-content: center;
-    align-items: center;
-}
-#contact-title {  
-    grid-column: 1 / -1;
-    grid-row: 1 / 2;
-    justify-self: center;
-    align-self: center;
-}
-
-#contact-title {
-    font-size: 2.2rem;
-    font-style: italic;
-}
-
-#contact-title::after {
-    display: block;
-    content: '';
-    margin: 0.5rem auto;
-    height: 2px;
-    width: 80%;
-    background-color: var(--light-pink);
-}
-.contactus {
-    display:flex;
-	justify-content: center;    
-	margin: 0 auto;
-}
-
-/* code from https://www.w3schools.com/ */
-input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc; 
-    border-radius: 4px; 
-    box-sizing: border-box; 
-    margin-top: 6px; 
-    margin-bottom: 16px; 
-    resize: vertical 
-}
-
-input[type=email] {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc; 
-    border-radius: 4px; 
-    box-sizing: border-box; 
-    margin-top: 6px; 
-    margin-bottom: 16px; 
-    resize: vertical 
-}
-
-button[type=submit] {
-    background-color: #e6007e;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-  
-button[type=submit]:hover {
-    background-color: #e6007e;
+button[type=submit]:hover,
+button[type=submit]:focus {
+    background-color: var(--blue);
+    color: var(--p-color-lt);
 }
 
 /* -------------------------------------------------------------------- Accessibility */
@@ -354,10 +229,136 @@ nav {
     height: revert;
 }
 
+/* -------------------------------------------------------------------- Awareness */
+
+#awareness {
+    display: grid;
+    grid-template-columns: 1;
+    grid-template-rows: minmax(3rem, auto) auto auto repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+}
+
+#awareness-title {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    justify-self: center;
+    align-self: center;
+}
+
+#utils-content {
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+}
+
+#utils-controls {
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
+}
+
+#awareness-content-1 {
+    grid-column: 1 / -1;
+    grid-row: 4 / 5;
+}
+
+#awareness-content-2 {
+    grid-column: 1 / -1;
+    grid-row: 5 / 6;
+}
+
+#utils-controls {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.utils-buttons {
+    display: flex;
+    flex-direction: column;
+}
+
+.utils-control-button {
+    height: 3.5rem;
+    width: 15rem;
+    margin: 0.5rem 0;
+    border-radius: 0.5rem;
+    font-size: 1.2rem;
+}
+
+model-viewer {
+    height: 50vh;
+    width: 100%;
+    pointer-events: none;
+    background-color: transparent;
+}
+
+/* -------------------------------------------------------------------- Resource styling */
+
+.resources-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+/* -------------------------------------------------------------------- Contact Us Page */
+
+.contact {
+    display: grid;
+    grid-template-columns: 1;    
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-title {  
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    justify-self: center;
+    align-self: center;
+}
+
+.contact-us {
+    display: flex;
+	justify-content: center;    
+	margin: 0 auto;
+}
+
+/* code from https://www.w3schools.com/ */
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 6px; 
+    margin-bottom: 16px; 
+    resize: vertical 
+}
+
+input[type=email] {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 6px; 
+    margin-bottom: 16px; 
+    resize: vertical;
+}
+
+button[type=submit] {
+    background-color: var(--pink);
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
 /* -------------------------------------------------------------------- Footer */
 
 .footer-allowance {
-    padding-bottom: 48px;
+    padding-bottom: 68px;
 }
 
 footer {
@@ -378,6 +379,32 @@ footer {
 .footer-page {
     background: var(--light-blue);
     background: linear-gradient(90deg, rgba(93, 208, 250, 1) 0%, rgba(247, 168, 185, 1) 100%);
+}
+
+.footer-page section {
+    margin-bottom: 24px;
+}
+
+.footer-page h1 {
+    line-height: 72px;
+}
+
+.footer-page h2,
+.footer-page h3 {
+    line-height: 50px;
+}
+
+.footer-page p,
+.footer-page li {
+    line-height: 28px;
+}
+
+.footer-page li {
+    margin-left: 40px;
+}
+
+.footer-page footer p {
+    line-height: normal;
 }
 
 /* -------------------------------------------------------------------- Media queries */
@@ -473,7 +500,7 @@ footer {
         padding-top: 8px;
     }
 
-    .contactus {
+    .contact-us {
        margin: 50px;         
     } 
 
@@ -482,9 +509,14 @@ footer {
     }
 }
 
+@media only screen and (min-width: 768px) {
+    .overlay-content {
+        display: grid;
+    }
+}
+
     /* Large devices (Desktop tablets, 992px and up) */
 @media only screen and (min-width: 992px) {
-
     article > section {
         font-size: 1.6rem;
         line-height: 3.2rem;
@@ -523,13 +555,6 @@ footer {
     #male-model-viewer {
         grid-column: 2 / -1;
     }
-
-}
-
-@media only screen and (min-width: 768px) {
-    .overlay-content {
-        display: grid;
-    }
 }
 
 @media only screen and (max-width: 1040px) {
@@ -544,13 +569,3 @@ footer {
         visibility: visible;
     }
 }
-
-
-/* -------------------------------------------------------------------- Resource styling */
-
-    .resources-grid {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-    
-     }
-
