--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,37 @@ a:focus {
     text-decoration-style: double;
 }
 
+/* -------------------------------------------------------------------- About Us */
+
+#about-us {
+    display: grid;
+    grid-template-columns: 1;
+    grid-template-rows: 2;
+    justify-content: center;
+    align-items: center;
+}
+
+#about-us-title {
+    font-size: 2.2rem;
+    font-style: italic;
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    justify-self: center;
+    align-self: center;
+}
+
+#about-us-title::after {
+    display: block;
+    content: '';
+    margin: 0.5rem auto;
+    height: 2px;
+    width: 80%;
+    background-color: var(--light-pink);
+}
+
+.article-content {
+    margin: 1rem 3rem;
+}
 /* -------------------------------------------------------------------- Awareness */
 
 #awareness {
