updates to resource page #22

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -531,6 +531,6 @@ footer {
     .resources-grid {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-    
+        margin:auto;
      }
 
