Styled the resource <li> & grid

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,10 +47,16 @@ a {
     color: var(--p-color-dk);
 }
 
-article > section {
+article > section,
+.resource-lists li {
     font-size: 1.2rem;
     line-height: 2rem;
 }
+
+.resource-lists li::marker {
+    content: url(../favicon/favicon-32x32.png);
+}
+
 
 /* -------------------------------------------------------------------- Utilities */
 
@@ -299,7 +305,13 @@ model-viewer {
 .resources-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
 }
+
+.resources-grid h2 {
+    grid-column: 1 / -1;
+}
+
 
 /* -------------------------------------------------------------------- Contact Us Page */
 
@@ -500,6 +512,11 @@ footer {
         padding-top: 8px;
     }
 
+    .resources-grid {
+        grid-template-columns: 1fr;
+    }
+
+
     .contact-us {
        margin: 50px;         
     } 
@@ -517,7 +534,8 @@ footer {
 
     /* Large devices (Desktop tablets, 992px and up) */
 @media only screen and (min-width: 992px) {
-    article > section {
+    article > section,
+    .resource-lists li {
         font-size: 1.6rem;
         line-height: 3.2rem;
     }
@@ -569,3 +587,4 @@ footer {
         visibility: visible;
     }
 }
+
