--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -395,8 +395,10 @@ input[type=email] {
 }
 
 button[type=submit] {
-    background-color: var(--pink);
-    color: white;
+    background-color: var(--light-pink);
+    color: var(--p-color-dk);
+    display: block;
+    margin: 0 auto;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
